fix(migraton): broke design and dev into tabs

--- a/src/pages/releases/v11/develop.mdx
+++ b/src/pages/releases/v11/develop.mdx
@@ -3,7 +3,7 @@ title: v11
 description:
   This is our v11 migration guide. Here you can find information on how to
   migrate from Carbon v10 to v11.
-tabs: ['Overview', 'Migration']
+tabs: ['Overview', 'Design', 'Develop']
 ---
 
 import { Tag } from 'carbon-components-react';
