--- a/src/pages/releases/v11/overview.mdx
+++ b/src/pages/releases/v11/overview.mdx
@@ -2,8 +2,8 @@
 title: v11
 description:
   This guide includes everything you need to migrate your offering from an
-  earlier version of Carbon to v10.
-tabs: ['Overview', 'Migration']
+  earlier version of Carbon to v11.
+tabs: ['Overview', 'Design', 'Develop']
 ---
 
 <PageDescription>
