fix: clean up redundant docs

--- a/src/pages/migrating/v11/develop.mdx
+++ b/src/pages/migrating/v11/develop.mdx
@@ -1,5 +1,5 @@
 ---
-title: Guide
+title: v11
 description:
   This guide includes everything you need to migrate your offering from an older
   version of Carbon to v11.
@@ -133,7 +133,7 @@ specific packages, checkout our
   </Column>
 </Row>
 
-### Size Prop updates
+## Size Prop updates
 
 - Over the years our size props got a little messy. So we updated them, so that
   they are now consistent across all of our components.
@@ -165,3 +165,7 @@ Here is a
 
 - No longer need `Row` components
 - You can drop `Column` components directly into `Grid`
+
+## Color tokens
+
+### What this means for you and your team
