--- a/src/pages/migrating/v11/design.mdx
+++ b/src/pages/migrating/v11/design.mdx
@@ -1,5 +1,5 @@
 ---
-title: Guide
+title: v11
 description:
   This guide includes everything you need to migrate your offering from an older
   version of Carbon to v11.
