Revert "fix: clean up redundant docs"
This reverts commit 350e395c3003adb234958582a53e883b90382b66.

--- a/src/pages/migrating/guide/design.mdx
+++ b/src/pages/migrating/guide/design.mdx
@@ -1,5 +1,5 @@
 ---
-title: v11
+title: Guide
 description:
   This guide includes everything you need to migrate your offering from an older
   version of Carbon to v11.
