--- a/src/pages/migrating/guide/overview.mdx
+++ b/src/pages/migrating/guide/overview.mdx
@@ -1,5 +1,5 @@
 ---
-title: v11
+title: Guide
 description:
   This guide includes everything you need to migrate your offering from an older
   version of Carbon to v11.
@@ -23,10 +23,10 @@ for the public preview release available in the coming months.
 <AnchorLinks>
 
 <AnchorLink>Overview</AnchorLink>
-<AnchorLink>Benefits</AnchorLink>
-<AnchorLink>FAQs</AnchorLink>
 <AnchorLink>Read</AnchorLink>
 <AnchorLink>Watch</AnchorLink>
+<AnchorLink>Release FAQs</AnchorLink>
+
 </AnchorLinks>
 
 ## Overview
@@ -56,46 +56,80 @@ brand-driven product redesigns.
 - Assets that are deprecated in v10 will remain in v11 and will be removed in
   v12.
 
-## Benefits
+## Read
 
-What are the benefits of migrating to v11 as a designer, developer, product
-manager or as my product's customers?
+<Row>
+<Column colLg={4} colMd={4} noGutterMdLeft>
+<ArticleCard
+    title="Carbon’s 2021 release: April update"
+    author="Josh Black"
+    date="April 22, 2021"
+    href="https://medium.com/carbondesign/carbons-2021-release-april-update-9d23242b3dea"
+    >
 
-### As a designer
+![Carbon’s 2021 release: April update](images/carbon_2021-april-update.png)
+
+</ArticleCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterMdLeft>
+<ArticleCard
+    title="What’s coming to Carbon in 2021"
+    author="Josh Black"
+    date="November 12, 2020"
+    href="https://medium.com/carbondesign/whats-coming-to-carbon-in-2021-39a4c7d1762a"
+    >
+
+![Carbon 2021 release](images/carbon_2021.png)
+
+</ArticleCard>
+</Column>
+</Row>
+
+## Watch
+
+As part of IBM's front-end developer educational series, FEDucation, Josh Black
+introduces the upcoming v11 release, its features, and how to get involved and
+provide feedback.
+
+<Video title="Carbon v11 video" vimeoId="567122059" />
+
+## Release FAQs
+
+### What are the benefits of Carbon v11 for me as a designer?
 
 - Token names have been updated for easier application. Names are more logical
   and easier to apply without always having to refer to a guide.
-- Nothing visually has changed in any of the components, and no redesign work is
-  required.
 
-### As a developer
+- Nothing visually has changed in any of the components, and so no redesign work
+  is required.
+
+### What are the benefits of Carbon v11 for me as a developer?
 
 - CSS grid provides easier implementation of layouts, support for sub-grid, and
   other features that come along with this new technology.
+
 - CSS custom properties for theming (light mode / dark mode).
+
 - A 90% reduction in compile times for most projects with the update to Sass
   architecture.
+
 - Quality of life updates such as:
+
   - Consistent component API across the board.
   - Improvements to Sass structure for getting started and productive use
     experiences.
+
 - New components:
   - Cover a wider variety of use-cases in your product with some of our new
     components.
   - Easily build our more accessible experiences with our accessibility
     component primitives.
 
-### As a product manager
-
-- Developers working with Carbon will see faster compile times: reduced by ~90%
-  and build times reduced by ~60%.
-
-### My product’s customers
+### What are the benefits to my product’s customers?
 
 - Light/dark mode support.
-- Faster load times due to smaller bundle sizes.
 
-## FAQs
+- Faster load times due to smaller bundle sizes.
 
 ### Do I need to update right away? If not, when will we need to update?
 
@@ -180,40 +214,3 @@ manager or as my product's customers?
   deprecated. They will also need to update how they bring in Carbon. For
   details about what can be done now, see our
   [April update Medium article](https://medium.com/carbondesign/carbons-2021-release-april-update-9d23242b3dea).
-
-## Read
-
-<Row>
-<Column colLg={4} colMd={4} noGutterMdLeft>
-<ArticleCard
-    title="Carbon’s 2021 release: April update"
-    author="Josh Black"
-    date="April 22, 2021"
-    href="https://medium.com/carbondesign/carbons-2021-release-april-update-9d23242b3dea"
-    >
-
-![Carbon’s 2021 release: April update](images/carbon_2021-april-update.png)
-
-</ArticleCard>
-</Column>
-<Column colLg={4} colMd={4} noGutterMdLeft>
-<ArticleCard
-    title="What’s coming to Carbon in 2021"
-    author="Josh Black"
-    date="November 12, 2020"
-    href="https://medium.com/carbondesign/whats-coming-to-carbon-in-2021-39a4c7d1762a"
-    >
-
-![Carbon 2021 release](images/carbon_2021.png)
-
-</ArticleCard>
-</Column>
-</Row>
-
-## Watch
-
-As part of IBM's front-end developer educational series, FEDucation, Josh Black
-introduces the upcoming v11 release, its features, and how to get involved and
-provide feedback.
-
-<Video title="Carbon v11 video" vimeoId="567122059" />
