--- a/src/pages/migrating/guide/develop.mdx
+++ b/src/pages/migrating/guide/develop.mdx
@@ -29,21 +29,21 @@ contributions.
 
 ## Changelog
 
-| Feature                   | Status                           | Migration doc                                       | Packages or components impacted                                                                                            |
-| ------------------------- | -------------------------------- | --------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------- | --------------------------- | --- |
-| `@carbon/styles`          | <Tag type="green">New</Tag>      | [Bring in styles](#bring-in-styles)                 | `carbon-components`                                                                                                        |
-| `@carbon/react`           | <Tag type="green">New</Tag>      | [Carbon Components React](#carbon-components-react) | `carbon-components-react`                                                                                                  |
-| CSS Grid                  | <Tag type="cyan">Breaking</Tag>  | [CSS Grid](#css-grid)                               | `@carbon/grid` `Grid` `Row` `Column`                                                                                       |
-| Design Tokens             | <Tag type="cyan">Breaking</Tag>  | [SASS Modules](#sass-modules)                       | All components                                                                                                             |
-| Sass Modules              | <Tag type="cyan">Breaking</Tag>  | [SASS Modules](#sass-modules)                       | `@carbon/styles` `carbon-components-angular` `carbon-components-vue` `@carbon/react`                                       |
-| Size Props                | <Tag type="cyan">Breaking</Tag>  | [Size prop](#size-prop-updates)                     | `Button` `DataTable` `Modal` `ComboBox` `Dropdown` `TextInput` `Search` `DatePicker` `Tag` `Toggle` `Select` `MultiSelect` |
-| Theming                   | <Tag type="green">New</Tag>      | [SASS Modules](#theming)                            | v11.x                                                                                                                      |
-| <!--                      | UI Shell theming                 | <Tag type="cyan">Breaking</Tag>                     | [SASS Modules](#sass-modules)                                                                                              | `UI Shell` `@carbon/styles` | --> |
-| <!--                      | Popover                          | <Tag type="green">New</Tag>                         | [SASS Modules](#sass-modules)                                                                                              | `Tooltip`                   | --> |
-| <!--                      | Tooltip                          | <Tag type="cyan">Breaking</Tag>                     | [SASS Modules](#sass-modules)                                                                                              | `Tooltip` `@carbon/react`   | --> |
-| `carbon-components-react` | <Tag type="red">Deprecated</Tag> | [SASS Modules](#sass-modules)                       | v11.x                                                                                                                      |
-| `carbon-icons`            | <Tag type="red">Deprecated</Tag> | [SASS Modules](#sass-modules)                       | v11.x                                                                                                                      |
-| `carbon-components`       | <Tag type="red">Deprecated</Tag> | [SASS Modules](#sass-modules)                       | v11.x                                                                                                                      |
+| Feature                   | Status                           | Migration doc                   | Packages or components impacted                                                      |
+| ------------------------- | -------------------------------- | ------------------------------- | ------------------------------------------------------------------------------------ | -------------------------------------------------------------------------------------------------------------------------- | --- |
+| `@carbon/react`           | <Tag type="green">New</Tag>      | [Components](#components)       | `carbon-components-react`                                                            |
+| `@carbon/styles`          | <Tag type="green">New</Tag>      | [SASS Modules](#sass-modules)   | `carbon-components`                                                                  |
+| Sass Modules              | <Tag type="cyan">Breaking</Tag>  | [SASS Modules](#sass-modules)   | `@carbon/styles` `carbon-components-angular` `carbon-components-vue` `@carbon/react` |
+| Color Tokens              | <Tag type="cyan">Breaking</Tag>  | [Color tokens](#color-tokens)   | All components                                                                       |
+| Theming                   | <Tag type="green">New</Tag>      | [Theming](#theming)             | v11.x                                                                                |
+| CSS Grid                  | <Tag type="cyan">Breaking</Tag>  | [CSS Grid](#css-grid)           | `@carbon/grid` `Grid` `Row` `Column`                                                 |
+| <!--                      | Size Props                       | <Tag type="cyan">Breaking</Tag> | [Size prop](#size-prop-updates)                                                      | `Button` `DataTable` `Modal` `ComboBox` `Dropdown` `TextInput` `Search` `DatePicker` `Tag` `Toggle` `Select` `MultiSelect` | --> |
+| <!--                      | UI Shell theming                 | <Tag type="cyan">Breaking</Tag> | [SASS Modules](#sass-modules)                                                        | `UI Shell` `@carbon/styles`                                                                                                | --> |
+| <!--                      | Popover                          | <Tag type="green">New</Tag>     | [SASS Modules](#sass-modules)                                                        | `Tooltip`                                                                                                                  | --> |
+| <!--                      | Tooltip                          | <Tag type="cyan">Breaking</Tag> | [SASS Modules](#sass-modules)                                                        | `Tooltip` `@carbon/react`                                                                                                  | --> |
+| `carbon-components-react` | <Tag type="red">Deprecated</Tag> | [Components](#components)       |                                                                                      |
+| `carbon-icons`            | <Tag type="red">Deprecated</Tag> | [Components](#components)       |                                                                                      |
+| `carbon-components`       | <Tag type="red">Deprecated</Tag> | [SASS Modules](#sass-modules)   |                                                                                      |
 
 ## Components
 
@@ -74,23 +74,6 @@ yarn remove carbon-components carbon-components-react carbon-icons
 something here about updating imports to point to `@carbon/react` instead of
 `carbon-components-react`, maybe explaing that the components all still work the
 same just coming from a diff package now. and why did we do this???
-
-## CSS Grid
-
-A huge change for us this release is dropping support for IE11, which means we
-can now support CSS Grid and sub-grid. 🎉
-
-Here is a
-[link to our Grid docs](https://github.com/carbon-design-system/carbon/blob/main/docs/migration/11.x-grid.md).
-
-### What this means for you and your team:
-
-- No longer need `Row` components
-- You can drop `Column` components directly into `Grid`
-
-## Design Tokens
-
-TODO - to be added
 
 ## Sass Modules
 
@@ -150,23 +133,11 @@ specific packages, checkout our
   </Column>
 </Row>
 
-## Size Props
+## Color Tokens
 
-- Over the years our size props got a little messy. So we updated them, so that
-  they are now consistent across all of our components.
+TODO - to be added
 
 ### What this means for you and your team:
-
-The props should now look like this:
-
-| Prop Name | Size |
-| --------- | ---- |
-| xs        | 24px |
-| sm        | 32px |
-| md        | 40px |
-| lg        | 48px |
-| xl        | 64px |
-| 2xl       | 80px |
 
 ## Theming
 
@@ -219,3 +190,38 @@ Here is an example of how you can use the `Layer` component:
 
 To learn more about how our `Layer` component works and it's API, checkout our
 [Layer docs](https://github.com/carbon-design-system/carbon/blob/main/packages/carbon-react/src/components/Layer/Layer.mdx).
+
+## CSS Grid
+
+A huge change for us this release is dropping support for IE11, which means we
+can now support CSS Grid and sub-grid. 🎉
+
+Here is a
+[link to our Grid docs](https://github.com/carbon-design-system/carbon/blob/main/docs/migration/11.x-grid.md).
+
+### What this means for you and your team:
+
+- No longer need `Row` components
+- You can drop `Column` components directly into `Grid`
+
+<!-- 
+
+## Size Props
+
+- Over the years our size props got a little messy. So we updated them, so that
+  they are now consistent across all of our components.
+
+### What this means for you and your team:
+
+The props should now look like this:
+
+| Prop Name | Size |
+| --------- | ---- |
+| xs        | 24px |
+| sm        | 32px |
+| md        | 40px |
+| lg        | 48px |
+| xl        | 64px |
+| 2xl       | 80px |
+
+-->
