fix: address josh comments

--- a/src/pages/migrating/guide/design.mdx
+++ b/src/pages/migrating/guide/design.mdx
@@ -1,8 +1,8 @@
 ---
 title: Guide
 description:
-  This guide includes everything you need to migrate your offering from an older
-  version of Carbon to v11.
+  This guide includes everything you need to migrate your offering from v10 to
+  v11 of Carbon.
 tabs: ['Overview', 'Design', 'Develop']
 ---
 
