--- a/src/pages/migrating/guide/develop.mdx
+++ b/src/pages/migrating/guide/develop.mdx
@@ -19,26 +19,19 @@ contributions.
 
 </PageDescription>
 
-<AnchorLinks>
-
-<AnchorLink>Changelog</AnchorLink>
-<AnchorLink>Components</AnchorLink>
-<AnchorLink>Sass Modules</AnchorLink>
-
-</AnchorLinks>
-
 ## Changelog
 
-| Feature             | Status                           | Migration doc                 | Packages or components impacted                                                      |
-| ------------------- | -------------------------------- | ----------------------------- | ------------------------------------------------------------------------------------ |
-| `@carbon/react`     | <Tag type="green">New</Tag>      | [Components](#components)     | `carbon-components-react`                                                            |
-| `@carbon/styles`    | <Tag type="green">New</Tag>      | [SASS Modules](#sass-modules) | `carbon-components`                                                                  |
-| Sass Modules        | <Tag type="cyan">Breaking</Tag>  | [SASS Modules](#sass-modules) | `@carbon/styles` `carbon-components-angular` `carbon-components-vue` `@carbon/react` |
-| Color Tokens        | <Tag type="cyan">Breaking</Tag>  | [Color tokens](#color-tokens) | All components                                                                       |
-| Theming             | <Tag type="green">New</Tag>      | [Theming](#theming)           | v11.x                                                                                |
-| CSS Grid            | <Tag type="cyan">Breaking</Tag>  | [CSS Grid](#css-grid)         | `@carbon/grid` `Grid` `Row` `Column`                                                 |
-| `carbon-icons`      | <Tag type="red">Deprecated</Tag> | [Components](#components)     |                                                                                      |
-| `carbon-components` | <Tag type="red">Deprecated</Tag> | [SASS Modules](#sass-modules) |                                                                                      |
+| Feature                   | Status                           | Migrate                       | Packages or components impacted                                                      |
+| ------------------------- | -------------------------------- | ----------------------------- | ------------------------------------------------------------------------------------ |
+| `@carbon/react`           | <Tag type="green">New</Tag>      | [Components](#components)     | `carbon-components-react`                                                            |
+| `@carbon/styles`          | <Tag type="green">New</Tag>      | [SASS Modules](#sass-modules) | `carbon-components`                                                                  |
+| Sass Modules              | <Tag type="cyan">Breaking</Tag>  | [SASS Modules](#sass-modules) | `@carbon/styles` `carbon-components-angular` `carbon-components-vue` `@carbon/react` |
+| Color Tokens              | <Tag type="cyan">Breaking</Tag>  | [Color tokens](#color-tokens) | All components                                                                       |
+| Theming                   | <Tag type="green">New</Tag>      | [Theming](#theming)           | `@carbon/react`                                                                      |
+| CSS Grid                  | <Tag type="cyan">Breaking</Tag>  | [CSS Grid](#css-grid)         | `@carbon/grid` `Grid` `Row` `Column`                                                 |
+| `carbon-icons`            | <Tag type="red">Deprecated</Tag> | [Components](#components)     |                                                                                      |
+| `carbon-components`       | <Tag type="red">Deprecated</Tag> | [SASS Modules](#sass-modules) |                                                                                      |
+| `carbon-components-react` | <Tag type="red">Deprecated</Tag> | [Components](#components)     |                                                                                      |
 
 ## Components
 
@@ -130,9 +123,28 @@ specific packages, checkout our
 
 ## Color Tokens
 
-TODO - to be added
+We have renamed our color tokens to be more semantic and inform on their usage.
+Some of the changes will be easy enough to find-and-replace, however, make sure
+to double check that you were using the correct v10 token as to not migrate to
+an incorrect token.
 
 ### What this means for you and your team:
+
+- Intuitive naming ensures correct token usage
+- Less ambiguity around what a color token is for
+
+### How to migrate
+
+Check for any sass files that are referencing color tokens, and use our color
+token migration table to find the updated token name. We recommend checking
+manually since some of the v10 tokens apply to more than one v11 token depending
+on usage. For example `hover-ui` could be `field-hover` or `layer-hover`
+depending on where it is being used.
+
+To view a full table of v10 color tokens and their v11 equivalent, check out our
+[colors migration doc](https://github.com/carbon-design-system/carbon/blob/356dcf2c2de54bece89440b989e715f08790d470/docs/migration/11.x-color.md).
+
+<!-- to do: update the link above once John's PR is merged. -->
 
 ## Theming
 
