fix(migration-docs): josh edits

--- a/src/pages/migrating/guide/overview.mdx
+++ b/src/pages/migrating/guide/overview.mdx
@@ -1,8 +1,8 @@
 ---
 title: Guide
 description:
-  This guide includes everything you need to migrate your offering from an older
-  version of Carbon to v11.
+  This guide includes everything you need to migrate your offering from v10 to
+  v11 of Carbon.
 tabs: ['Overview', 'Design', 'Develop']
 ---
 
@@ -128,7 +128,10 @@ provide feedback.
 ### What are the benefits to my product’s customers?
 
 - Light/dark mode support.
-
+- Faster time to develop new features.
+- New components added that can be used instead of being newly developed.
+- Accessibility primitives to help build more accessible experiences as early as
+  possible to the development process.
 - Faster load times due to smaller bundle sizes.
 
 ### Do I need to update right away? If not, when will we need to update?
