--- a/src/pages/guidelines/color/implementation.mdx
+++ b/src/pages/guidelines/color/implementation.mdx
@@ -139,7 +139,7 @@ identified by the following key.
 
 <br />
 
-#### Example of how to apply layer set tokens in a layout
+#### Applying layer set tokens in a layout
 
 Referencing the image below, the starting base level is the page area behind and
 above the tabs; it uses `$background` from the base set. The tab component is
@@ -152,7 +152,7 @@ layer above the base and so also uses `$layer-01` as its background.
 In the tab's main section, the text input field is placed on top of `$layer-01`
 making it a part of the next layer level and will use tokens from the 02 layer
 set, so `$field-02` and `$border-strong-02`. Also a part of the second layer
-level are the tiles in the sub-section, this includes the tile background
+level are the tiles in the sub-section which includes the tile background
 `$layer-02` as well as the border between the tiles `$border-subtle-02`.
 However, components added on top of the tiles—the text input and overflow
 menu—are considered part of third layer level and will use tokens from the 03
@@ -203,15 +203,15 @@ Token key
 
 #### Building components with layer tokens
 
-Building component with layer tokens works much like how you would have built
+Building components with layer tokens works much like how you would have built
 component variants in v10. For each layer level that a component lives on, a
 separate component variation must be built using the explicit layer set tokens.
 In v10, these color variants were known as the `light` prop variants, however
 these new layering tokens allows for a three levels color variant in components
 that wasn't possible in v10.
 
-Spec each component variant with it corresponding layer set tokens. For elements
-that are not part of the layering model like type or icons use the normal color
+Spec each component variant with its corresponding layer set tokens. For elements
+that are not part of the layering model like type or icons, use the normal color
 tokens as you would have in v10. These tokens will be the same across variants
 as they are high enough contrast not to need to change with each layer.
 
@@ -235,7 +235,7 @@ on and will call the correct layer set token needed for that layer level. There
 is only one set of contextual tokens and it requires only one variant of a
 component to be built. Contextual tokens are a part of the component package
 instead of the theme package and are used in the v11 Carbon components. To
-implement the nesting layers correctly in code use the layer component with the
+implement the nesting layers correctly in code, use the layer component with the
 contextual tokens.
 
 Contextual tokens have all the same type of tokens as the layer set except
@@ -298,7 +298,7 @@ $border-strong
 
 <br />
 
-#### Example of how to apply contextual layers tokens in a layout
+#### Applying contextual layer tokens in a layout
 
 Referencing the image below, the starting base level is still the page area
 behind and above the tabs; it uses `$background`. However, there are no sets so
@@ -379,11 +379,11 @@ at a later date for more information.
 Inline theming is used when a section of a UI needs to have a different theme
 from the rest of the page. Inline theming allows themes to be nested within each
 other without needing custom styles or overrides. In product, a common use-case
-for inline theming is applying a contrasting theme to UI Shell and side panels.
+for inline theming is applying a contrasting theme to a UI shell and side panels.
 This is especially common in light themed products or light modes. For example,
-the majority of a page can use the White theme while the UI Shell and the left
-side panel uses an inline Gray 100 theme. This type of inline theme pairing
-creates a high contrast moment that adds emphasis and focus to a work flow.
+the majority of a page can use the White theme while the UI shell and the left
+side panel use an inline Gray 100 theme. This type of inline theme pairing
+creates a high contrast moment that adds emphasis and focus to a workflow.
 
 You should only need to use inline theming for major shifts in color, like high
 contrast moments. The more subtle transitions of color in a product are handled
@@ -405,7 +405,7 @@ If your product is using the Carbon color tokens and themes then a section of
 the page can easily be targeted to call a different theme without having to use
 new tokens or manually change values. For the inline themed section simply use
 the same Carbon tokens you were using for the rest of the page, then using the
-theme component assign the whole zone the new theme.
+theme component assign the new theme to the whole zone.
 
 When designing for inline theming you'll need to pull assets from the other
 theme library files (or use the
@@ -434,8 +434,8 @@ at a later date for more information.
 ## Light or dark mode
 
 Light or dark mode is a theme setting that allows the end user to choose either
-an UI that is predominately light or dark in color. The UI will automatically
-switch from using light colors backgrounds with dark color text to using dark
+a UI that is predominately light or dark in color. The UI will automatically
+switch from using light color backgrounds with dark color text to using dark
 color backgrounds with light color text. The themes use color tokens to
 interpret which values are need for each theme. It is the color tokens that
 allows a UI to so easily switch from one mode to the next. You cannot implement
@@ -476,21 +476,21 @@ migraines.
 You can build a light or dark mode by using the Carbon themes and color tokens.
 Your product will need to choose a light Carbon theme (White or Gray 10) and a
 dark Carbon theme (Gray 100 or Gray 90).  All color in your designs and
-components wither Carbon, PAL or custom made should be redlined using the Carbon
+components whether Carbon, PAL or custom made should be redlined using the Carbon
 color tokens (it would also be to your advantage to use the color token layer
 styles from the Carbon design asset libraries when designing).
 
 Redlining a design in one theme should be enough and not require duplicate
 designs. However, if products teams do want to have design comps in both light
 and dark mode then use this handy Sketch
-[theme switcher](https://github.com/IanKitchen-IBM/carbon-theme-switcher) Sketch
+[theme switcher](https://github.com/IanKitchen-IBM/carbon-theme-switcher)
 plug-in made by an IBMer.
 
 #### Creating a mode control
 
-Since this is a user preference you'll need to add a control somewhere in your
+Since this is a user preference, you'll need to add a control somewhere in your
 product for the user to make a theme mode selection. This is commonly done in a
-display settings, user profile, or account area. At the moment, the placement
+display setting, user profile, or account area. At the moment, the placement
 and design of this control is up to product teams, further guidance and designs
 for a mode control in IBM products may be offered in the future.
 
@@ -512,7 +512,7 @@ for a mode control in IBM products may be offered in the future.
 
 Mixing themes inline is still allowed with light or dark mode. Mixing inline
 theme contrast between elements in different modes is also allowed. It is very
-common for products to have side panels or UI Shell elements be high contrast in
+common for products to have side panels or UI shell elements be high contrast in
 light mode but low contrast in dark mode. These relationships can be mapped in
 code using the the theme component. Note that smaller components built with an
 inverse tokens (like tooltip) should remain high contrast when switching modes.
